# reponimous

./: .gitignore  README.md  README.rst  Reponimous.example  reponimous.py  requirements.pip  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
reponimous/: __init__.py  client.py
tests/: test_client.py
