[metadata]
name = reponimous
author = Craig Tracey
author-email = craigtracey@gmail.com
summary = Reponimous: a git overlay tool.
description-file = README.rst
home-page = https://github.com/craigtracey/reponimous
requires-python = 2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[entry_points]
console_scripts =
    reponimous = reponimous.client:main

[wheel]
universal = 0
